# fastapi-postgres-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sql  pr-guidelines.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 42ab91d65155_initial_migration.py
app/commands/: create_admin.py
app/features/auth/: router.py  schema.py  service.py
app/features/auth/graphql/mutations/: auth.py
app/features/auth/graphql/queries/: user.py
app/features/auth/graphql/types/: auth.py  user.py
app/graphql/: context.py  schema.py
app/models/: __init__.py  user.py
app/services/: email_service.py
app/templates/emails/: password_reset.html
app/utils/: api.py  config.py  database.py  dependencies.py  exception_handler.py  helpers.py  logging.py  permissions.py  security.py
misc/: pre-commit
scripts/: dev_setup.py
